[package]
name = "tulipchain"
version = "0.1.0"
authors = ["Michael Noronha <michaeltnoronha@gmail.com>"]

[dependencies]
bincode = "1.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
sodiumoxide = "0.0.16"
rand = "0.4.2"
chrono = { version = "0.4", features = ["serde", "rustc-serialize"]  }
rocket = "0.3.6"
rocket_codegen = "0.3.6"
rocket_contrib = "0.3.6"
argparse = "0.2.1"
reqwest = "0.8.5"
